# rclonefile

./: Cargo.toml  LICENSE  README.md  index.d.ts  index.js  package.json  prettier.config.js
.github/workflows/: CI.yml
__test__/: index.test.ts
__test__/inputs/: mario-link.txt  mario.txt
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: package.json
npm/darwin-x64/: README.md  package.json
src/: lib.rs
