[package]
edition = "2021"
name = "rclonefile"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "3", default-features = false, features = ["napi4"] }
napi-derive = "3"
libc = "0.2"
errno = "0.3"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
